k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: devops-mini-app
spec:
  selector: {app: devops-mini-app}
  ports:
    - port: 80
      targetPort: 3000
  type: ClusterIP
